--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <!-- visible content goes here -->
+<img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fi.pinimg.com%2F736x%2F5e%2Fef%2F6e%2F5eef6ea0cb2db06c35cdb778e301ecbb.jpg&imgrefurl=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F259308891031300595%2F&tbnid=txqtzoomae34HM&vet=12ahUKEwjx4OGEoenrAhUVQ1MKHbTHDvcQMygwegUIARCBAw..i&docid=PP4kGnqtRvUlvM&w=640&h=545&q=golden%20retriever%20puppy&client=safari&ved=2ahUKEwjx4OGEoenrAhUVQ1MKHbTHDvcQMygwegUIARCBAw">
 
 <h1>dig245-a2</h1>
 
