--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
 </head>
 <body>
 <!-- visible content goes here -->
-<img src="https://i.pinimg.com/736x/5e/ef/6e/5eef6ea0cb2db06c35cdb778e301ecbb.jpg"
- alt = "oops, it was supposed to be a puppy">
+
 
 <h1>dig245-a2</h1>
-
+<img src="https://i.pinimg.com/736x/5e/ef/6e/5eef6ea0cb2db06c35cdb778e301ecbb.jpg"
+ alt = "oops, it was supposed to be a puppy">
+ <h2>Viewing HTML source of a webpage in Google Chrome</h2>
+    <ol>
+      <li> list
+    </ol>
 
 </body>
 </html>
