--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
  alt = "oops, it was supposed to be a puppy">
  <h2>Viewing HTML source of a webpage in Google Chrome</h2>
     <ol>
-      <li> list
+      <li>Open Google Chrome.</li>
+      <li>Navigate to the webpage you wish to look at.</li>
+      <li>Right click on the element you wish to examine.<li>
+      <li>Select "inspect". A window will appear at the right of the screen <br>
+        containing the HTML source for the webpage, with the code of the element <br>
+        you selected highlighted. 
+
     </ol>
 
 </body>
