--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <ol>
       <li>Open Google Chrome.</li>
       <li>Navigate to the webpage you wish to look at.</li>
-      <li>Right click on the element you wish to examine.<li>
+      <li>Right click on the element you wish to examine.</li>
       <li>Select "inspect". A window will appear at the right of the screen <br>
         containing the HTML source for the webpage, with the code of the element <br>
-        you selected highlighted. 
+        you selected highlighted.
 
     </ol>
 
