--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
       <li>Open Google Chrome.</li>
       <li>Navigate to the webpage you wish to look at.</li>
       <li>Right click on the element you wish to examine.</li>
-      <li>Select "inspect". A window will appear at the right of the screen <br>
+      <li>Select "inspect." A window will appear at the right of the screen <br>
         containing the HTML source for the webpage, with the code of the element <br>
         you selected highlighted.
+      <li>This action shall henceforth be known as "peeking behind the tapestry," <br>
+        because it allows us to take what we see (the tapestry's exterior design/website) <br>
+        and pick a specific part of the fabric (element of the page) and look <br>
+        at the back of it to see how it was stitched together.<br>
 
     </ol>
 
