--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- visible content goes here -->
 
 
-<h1>dig245-a2</h1>
+<h1 class = myClass>dig245-a2</h1>
 <img src="https://i.pinimg.com/736x/5e/ef/6e/5eef6ea0cb2db06c35cdb778e301ecbb.jpg"
  alt = "oops, it was supposed to be a puppy">
  <h2>Viewing HTML source of a webpage in Google Chrome</h2>
