--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <!-- meta tags, links to css, etc. -->
 <title>Assignment 2</title>
+<link href="assets/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <!-- visible content goes here -->
