--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <!-- meta tags, links to css, etc. -->
 <title>Assignment 2</title>
 <link href="assets/css/style.css" type="text/css" rel="stylesheet">
+<style>
+  .classblue { color: blue;}
+</style>
 </head>
 <body>
 <!-- visible content goes here -->
 
 
-<h1>dig245-a2</h1>
+<h1 class = "classblue">dig245-a2</h1>
 <img src="https://i.pinimg.com/736x/5e/ef/6e/5eef6ea0cb2db06c35cdb778e301ecbb.jpg"
  alt = "oops, it was supposed to be a puppy">
  <h2>Viewing HTML source of a webpage in Google Chrome</h2>
