--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <title>Assignment 2</title>
 <link href="assets/css/style.css" type="text/css" rel="stylesheet">
 <style>
-  .classblue { color: blue;}
+  .classblue { color: blue; font-family: serif;text-align: center}
+  .classpurple { color: purple; font-family: serif; text-align: right;}
 </style>
 </head>
 <body>
@@ -15,7 +16,7 @@
 <h1 class = "classblue">dig245-a2</h1>
 <img src="https://i.pinimg.com/736x/5e/ef/6e/5eef6ea0cb2db06c35cdb778e301ecbb.jpg"
  alt = "oops, it was supposed to be a puppy">
- <h2>Viewing HTML source of a webpage in Google Chrome</h2>
+ <h2 class="classpurple">Viewing HTML source of a webpage in Google Chrome</h2>
     <ol>
       <li>Open Google Chrome.</li>
       <li>Navigate to the webpage you wish to look at.</li>
