--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 <title>Assignment 2</title>
 <link href="assets/css/style.css" type="text/css" rel="stylesheet">
 <style>
-  .classblue { color: blue; font-family: serif;text-align: center}
-  .classpurple { color: purple; font-family: serif; text-align: right;}
+  .classblue { color: blue; font-family: serif;}
+  .classpurple { color: purple; font-family: serif; }
+  .classcenter {text-align: center;}
 </style>
 </head>
-<body>
+<body class="classcenter">
 <!-- visible content goes here -->
 
 
