--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   .classblue { color: blue; font-family: serif;}
   .classpurple { color: purple; font-family: serif; }
   .classcenter {text-align: center;}
+  .classleft {text-align: left;}
 </style>
 </head>
 <body class="classcenter">
@@ -18,7 +19,7 @@
 <img src="https://i.pinimg.com/736x/5e/ef/6e/5eef6ea0cb2db06c35cdb778e301ecbb.jpg"
  alt = "oops, it was supposed to be a puppy">
  <h2 class="classpurple">Viewing HTML source of a webpage in Google Chrome</h2>
-    <ol>
+    <ol class="classleft">
       <li>Open Google Chrome.</li>
       <li>Navigate to the webpage you wish to look at.</li>
       <li>Right click on the element you wish to examine.</li>
