--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
         at the back of it to see how it was stitched together.<br>
 
     </ol>
+<table>
+  <tr>
+    <td></td>
+    <th>Sunday</th>
+    <th>Monday</th>
+    <th>Tuesday</th>
+    <th>Wednesday</th>
+    <th>Thursday</th>
+    <th>Friday</th>
+    <th>Saturday</th>
+  </tr>
+  <tr>
+    <td>Cry</td>
+    <td>Cry</td>
+    <td>Cry</td>
+    <td>Cry</td>
+    <td>Cry</td>
+    <td>Cry</td>
+    <td>Cry</td>
+  </tr>
 
+</table>
 </body>
 </html>
