--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         at the back of it to see how it was stitched together.<br>
 
     </ol>
+<h2 class="classpurple">Weekly Dream Schedule</h2>
 <table>
   <tr>
     <td></td>
