--- a/index.html
+++ b/index.html
@@ -44,98 +44,9 @@
     <th>Friday</th>
     <th>Saturday</th>
   </tr>
-  <tr>
-    <th>8am</th>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-  </tr>
-  <tr>
-    <th>9am</th>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-  </tr>
-  <tr>
-    <th>10am</th>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-  </tr>
-  <tr>
-    <th>11am</th>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-  </tr>
-  <tr>
-    <th>12pm</th>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-  </tr>
-  <tr>
-    <th>1pm</th>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-  </tr>
-  <tr>
-    <th>2pm</th>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-  </tr>
-  <tr>
-    <th>3pm</th>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    </tr>
-  <tr>
-    <th>4pm</th>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-    <td>Cry</td>
-  </tr>
-  <tr>
-      <th>5pm</th>
+  <tbody>
+    <tr>
+      <th>8am</th>
       <td>Cry</td>
       <td>Cry</td>
       <td>Cry</td>
@@ -145,7 +56,7 @@
       <td>Cry</td>
     </tr>
     <tr>
-      <th>6pm</th>
+      <th>9am</th>
       <td>Cry</td>
       <td>Cry</td>
       <td>Cry</td>
@@ -155,7 +66,7 @@
       <td>Cry</td>
     </tr>
     <tr>
-      <th>7pm</th>
+      <th>10am</th>
       <td>Cry</td>
       <td>Cry</td>
       <td>Cry</td>
@@ -165,7 +76,7 @@
       <td>Cry</td>
     </tr>
     <tr>
-      <th>8pm</th>
+      <th>11am</th>
       <td>Cry</td>
       <td>Cry</td>
       <td>Cry</td>
@@ -174,7 +85,97 @@
       <td>Cry</td>
       <td>Cry</td>
     </tr>
-
+    <tr>
+      <th>12pm</th>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+    </tr>
+    <tr>
+      <th>1pm</th>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+    </tr>
+    <tr>
+      <th>2pm</th>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+    </tr>
+    <tr>
+      <th>3pm</th>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      </tr>
+    <tr>
+      <th>4pm</th>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+      <td>Cry</td>
+    </tr>
+    <tr>
+        <th>5pm</th>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+      </tr>
+      <tr>
+        <th>6pm</th>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+      </tr>
+      <tr>
+        <th>7pm</th>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+      </tr>
+      <tr>
+        <th>8pm</th>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+        <td>Cry</td>
+      </tr>
+    </tbody>
 </table>
 </body>
 </html>
