--- a/index.html
+++ b/index.html
@@ -47,62 +47,62 @@
   <tbody>
     <tr>
       <th>8am</th>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
     </tr>
     <tr>
       <th>9am</th>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
     </tr>
     <tr>
       <th>10am</th>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
+      <td></td>
+      <td>Wake up</td>
+      <td>Wake up</td>
+      <td>Wake up</td>
+      <td>Wake up</td>
+      <td>Wake up</td>
+      <td></td>
     </tr>
     <tr>
       <th>11am</th>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
+      <td>Wake up</td>
+      <td rowspan="2">Work on crosswords/jigsaw</td>
+      <td rowspan="2">Work on crosswords/jigsaw</td>
+      <td rowspan="2">Work on crosswords/jigsaw</td>
+      <td rowspan="2">Work on crosswords/jigsaw</td>
+      <td rowspan="2">Work on crosswords/jigsaw</td>
+      <td>Wake up</td>
     </tr>
     <tr>
       <th>12pm</th>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
+      <td rowspan="2">Go to brunch</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td rowspan="2">Go to brunch</td>
     </tr>
     <tr>
       <th>1pm</th>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
+      <td></td>
+      <td>Eat lunch</td>
+      <td>Eat lunch</td>
+      <td>Eat lunch</td>
+      <td>Eat lunch</td>
+      <td>Eat lunch</td>
       <td>Cry</td>
     </tr>
     <tr>
