--- a/index.html
+++ b/index.html
@@ -34,16 +34,18 @@
     </ol>
 <h2 class="classpurple">Weekly Dream Schedule</h2>
 <table>
-  <tr>
-    <td></td>
-    <th>Sunday</th>
-    <th>Monday</th>
-    <th>Tuesday</th>
-    <th>Wednesday</th>
-    <th>Thursday</th>
-    <th>Friday</th>
-    <th>Saturday</th>
-  </tr>
+  <thead>
+    <tr>
+      <td></td>
+      <th>Sunday</th>
+      <th>Monday</th>
+      <th>Tuesday</th>
+      <th>Wednesday</th>
+      <th>Thursday</th>
+      <th>Friday</th>
+      <th>Saturday</th>
+    </tr>
+  </thead>
   <tbody>
     <tr>
       <th>8am</th>
@@ -103,17 +105,17 @@
       <td>Eat lunch</td>
       <td>Eat lunch</td>
       <td>Eat lunch</td>
-      <td>Cry</td>
+      <td></td>
     </tr>
     <tr>
       <th>2pm</th>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
-      <td>Cry</td>
+      <td rowspan="3">Lie in a hammock</td>
+      <td rowspan="3">Play with puppies</td>
+      <td rowspan="3">Play frisbee</td>
+      <td rowspan="3">Go roller skating</td>
+      <td rowspan="3">Visit Disney World</td>
+      <td rowspan="3">Do crafts with friends</td>
+      <td rowspan="3">Lie in a hammock</td>
     </tr>
     <tr>
       <th>3pm</th>
@@ -137,33 +139,33 @@
     </tr>
     <tr>
         <th>5pm</th>
-        <td>Cry</td>
-        <td>Cry</td>
-        <td>Cry</td>
-        <td>Cry</td>
-        <td>Cry</td>
-        <td>Cry</td>
-        <td>Cry</td>
+        <td>Play ping pong</td>
+        <td>Play ping pong</td>
+        <td>Play ping pong</td>
+        <td>Play ping pong</td>
+        <td>Play ping pong</td>
+        <td>Play ping pong</td>
+        <td>Play ping pong</td>
       </tr>
       <tr>
         <th>6pm</th>
-        <td>Cry</td>
-        <td>Cry</td>
-        <td>Cry</td>
-        <td>Cry</td>
-        <td>Cry</td>
-        <td>Cry</td>
-        <td>Cry</td>
+        <td>Eat dinner</td>
+        <td>Eat dinner</td>
+        <td>Eat dinner</td>
+        <td>Eat dinner</td>
+        <td>Eat dinner</td>
+        <td>Eat dinner</td>
+        <td>Eat dinner</td>
       </tr>
       <tr>
         <th>7pm</th>
-        <td>Cry</td>
-        <td>Cry</td>
-        <td>Cry</td>
-        <td>Cry</td>
-        <td>Cry</td>
-        <td>Cry</td>
-        <td>Cry</td>
+        <td rowspan="2">Watch a movie</td>
+        <td rowspan="2">Watch a movie</td>
+        <td rowspan="2">Watch a movie</td>
+        <td rowspan="2">Watch a movie</td>
+        <td rowspan="2">Watch a movie</td>
+        <td rowspan="2">Watch a movie</td>
+        <td rowspan="2">Watch a movie</td>
       </tr>
       <tr>
         <th>8pm</th>
