--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
     <tr>
       <th>11am</th>
       <td>Wake up</td>
-      <td rowspan="2">Work on crosswords/jigsaw</td>
-      <td rowspan="2">Work on crosswords/jigsaw</td>
-      <td rowspan="2">Work on crosswords/jigsaw</td>
-      <td rowspan="2">Work on crosswords/jigsaw</td>
-      <td rowspan="2">Work on crosswords/jigsaw</td>
+      <td rowspan="2">Crosswords/jigsaw</td>
+      <td rowspan="2">Crosswords/jigsaw</td>
+      <td rowspan="2">Crosswords/jigsaw</td>
+      <td rowspan="2">Crosswords/jigsaw</td>
+      <td rowspan="2">Crosswords/jigsaw</td>
       <td>Wake up</td>
     </tr>
     <tr>
