--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
     </tr>
     <tr>
       <th>12pm</th>
-      <td rowspan="2">Go to brunch</td>
+      <td rowspan="2">Brunch</td>
       <td></td>
       <td></td>
       <td></td>
       <td></td>
       <td></td>
-      <td rowspan="2">Go to brunch</td>
+      <td rowspan="2">Brunch</td>
     </tr>
     <tr>
       <th>1pm</th>
@@ -114,7 +114,7 @@
       <td rowspan="3">Play frisbee</td>
       <td rowspan="3">Go roller skating</td>
       <td rowspan="3">Visit Disney World</td>
-      <td rowspan="3">Do crafts with friends</td>
+      <td rowspan="3">Crafts with friends</td>
       <td rowspan="3">Lie in a hammock</td>
     </tr>
     <tr>
